Fixed hashtag header overflowing in mobile layout

--- a/TangerineUI-purple.css
+++ b/TangerineUI-purple.css
@@ -3013,7 +3013,7 @@ div[tabindex="-1"] + div[tabindex="-1"] > .status__wrapper > .status-reply.statu
 /* Hashtag header */
 .app-body .hashtag-header {
     font-size: 15px;
-    padding: 22px 20px 24px;
+    padding: 24px 20px;
     color: var(--color-content-fg);
     background-color: var(--color-content-secondary-bg);
     border-top: 1px solid var(--color-lines);
@@ -3032,12 +3032,27 @@ div[tabindex="-1"] + div[tabindex="-1"] > .status__wrapper > .status-reply.statu
     margin-top: -5px;
     width: max-content;
 }
-
-@media screen and (min-width:890px) and (max-width:1174px) {
-    .app-body .hashtag-header {
-        margin-top: 15px;
+@media screen and (max-width:460px) {
+    .app-body .hashtag-header .hashtag-header__header + div {
+        max-width: 55%;
+        line-height: 1.5;
+        margin-top: -2px;
+    }
+    .app-body .hashtag-header .hashtag-header__header + div > span {
+        display: inline-block;
+        margin-right: 5px;
     }
 }
+.layout-multiple-columns .hashtag-header .hashtag-header__header + div {
+    max-width: 55%;
+    line-height: 1.5;
+    margin-top: -2px;
+}
+.layout-multiple-columns .hashtag-header .hashtag-header__header + div > span {
+    display: inline-block;
+    margin-right: 5px;
+}
+
 @media screen and (min-width:890px) {
     .app-body .hashtag-header {
         border-left: 1px solid var(--color-lines);
